<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/id_label"
        android:text="@string/id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/deviceId_label"
        android:text="@string/deviceId_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/id_label"
        android:layout_alignParentLeft="true" />
    <TextView
        android:id="@+id/date_label"
        android:text="@string/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/deviceId_label"
        android:layout_alignParentLeft="true" />
    <TextView
        android:id="@+id/latitude_label"
        android:text="@string/latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/date_label"
        android:layout_alignParentLeft="true" />
    <TextView
        android:id="@+id/longitude_label"
        android:text="@string/longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/latitude_label"
        android:layout_alignParentLeft="true" />
    <TextView
        android:id="@+id/level_label"
        android:text="@string/level_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/longitude_label"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/id_value"
        android:text="@string/id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/id_label"
        android:layout_marginLeft="50dp" />

    <TextView
        android:id="@+id/deviceId_value"
        android:text="@string/deviceId_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/deviceId_label"
        android:layout_alignLeft="@+id/id_value" />
    <TextView
        android:id="@+id/date_value"
        android:text="@string/date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/date_label"
        android:layout_alignLeft="@+id/deviceId_value" />
    <TextView
        android:id="@+id/latitude_value"
        android:text="@string/latitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/latitude_label"
        android:layout_alignLeft="@+id/date_value" />
    <TextView
        android:id="@+id/longitude_value"
        android:text="@string/longitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/longitude_label"
        android:layout_alignLeft="@+id/latitude_value"
        />
    <TextView
        android:id="@+id/level_value"
        android:text="@string/level_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/level_label"
        android:layout_alignLeft="@+id/longitude_value" />

</RelativeLayout>
